<resources>
    <string name="app_name">VisiTrack</string>

    <string name="dummy_number">898</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet.</string>
    <string name="dummy_text_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi gravida elementum molestie. Integer sit amet aliquam eros, sit amet tempor.</string>
    <string name="dummy_time">14:20</string>
    <string name="dummy_date">17 June 2000</string>
    <string name="dummy_camera">Dummy Camera</string>

    <string name="language_key">language</string>
    <string name="notification_key">notification</string>

    <string name="general_statistics">General Statistics</string>
    <string name="visitor_count">Visitor Count</string>
    <string name="camera_count">Camera Count</string>
    <string name="violation">Violation :</string>
    <string name="notification">Notification</string>
    <string name="show_all_notification">Show all notification</string>
    <string name="camera_image">Camera Image</string>
    <string name="camera">Camera</string>
    <string name="notification_image">Notification Image</string>
    <string name="violation_id">Violation ID</string>
    <string name="violation_type">Violation Type</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="status">Status</string>
    <string name="finished">Finished</string>
    <string name="detection_error">Detection Error</string>
    <string name="camera_id">Camera ID</string>
    <string name="camera_name">Camera Name</string>
    <string name="camera_statistics">Camera Statistics</string>
    <string name="violation_count">Violation Count</string>
    <string name="welcome">Welcome</string>
    <string name="to_visitrack">to VisiTrack</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="visitrack">VisiTrack</string>
    <string name="slogan">For Your Future Technology</string>
    <string name="full_name">Full Name</string>
    <string name="company">Company</string>
    <string name="logo">Logo</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="language">Language</string>
    <string name="push_notification">Push Notification</string>
    <string name="register_here">Don\'t have account? Register here</string>
    <string name="no_data">Data not found</string>
    <string name="violation_updated">Violation status updated!</string>

    <string name="toolbar_visitrack">Visitrack</string>
    <string name="toolbar_detail_visitrack">Detail Notification</string>
    <string name="toolbar_camera_visitrack">Detail Camera</string>
    <string name="login_error">User not found</string>
    <string name="register_error">Can\'t register, please try again</string>
    <string name="status_default">No respond yet</string>
    <string name="status_done">Responded</string>
    <string name="status_false">False Detection</string>
    <string name="setting">Setting</string>
    <string name="language_logo">Language Logo</string>
    <string name="violation_not_updated">Violation status not updated!</string>
</resources>