<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailNotificationActivity">

    <ImageView
        android:id="@+id/iv_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_dark_background"
        android:contentDescription="@string/notification_image"
        android:minHeight="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="tv_head_id,tv_head_desc,tv_head_time,tv_head_date,tv_head_status,tv_head_type,tv_head_camera" />

    <TextView
        android:id="@+id/tv_head_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/violation_id"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_notification" />

    <TextView
        android:id="@+id/tv_head_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/violation_type"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_head_id"
        app:layout_constraintTop_toBottomOf="@+id/tv_id" />

    <TextView
        android:id="@+id/tv_head_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/camera"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_head_type"
        app:layout_constraintTop_toBottomOf="@+id/tv_type" />

    <TextView
        android:id="@+id/tv_head_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/date"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_head_camera"
        app:layout_constraintTop_toBottomOf="@+id/tv_camera" />

    <TextView
        android:id="@+id/tv_head_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/time"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_head_date"
        app:layout_constraintTop_toBottomOf="@+id/tv_date" />

    <TextView
        android:id="@+id/tv_head_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/description"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_head_time"
        app:layout_constraintTop_toBottomOf="@+id/tv_time" />

    <TextView
        android:id="@+id/tv_head_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/status"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_head_desc"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="120dp" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="tv_type,tv_camera,tv_date,tv_status,tv_time,tv_desc,tv_id" />

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/tv_head_id"
        tools:text="@string/dummy_number" />

    <TextView
        android:id="@+id/tv_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/tv_id"
        app:layout_constraintStart_toStartOf="@+id/tv_id"
        app:layout_constraintTop_toTopOf="@+id/tv_head_type"
        tools:text="@string/dummy_text" />

    <TextView
        android:id="@+id/tv_camera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/tv_type"
        app:layout_constraintStart_toStartOf="@+id/tv_type"
        app:layout_constraintTop_toTopOf="@+id/tv_head_camera"
        tools:text="@string/dummy_camera" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/tv_camera"
        app:layout_constraintStart_toStartOf="@+id/tv_camera"
        app:layout_constraintTop_toTopOf="@+id/tv_head_date"
        tools:text="@string/dummy_date" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/tv_date"
        app:layout_constraintStart_toStartOf="@+id/tv_date"
        app:layout_constraintTop_toTopOf="@+id/tv_head_time"
        tools:text="@string/dummy_time" />

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/tv_time"
        app:layout_constraintStart_toStartOf="@id/tv_time"
        app:layout_constraintTop_toTopOf="@+id/tv_head_desc"
        tools:text="@string/dummy_text_long" />

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/tv_desc"
        app:layout_constraintStart_toStartOf="@+id/tv_desc"
        app:layout_constraintTop_toTopOf="@+id/tv_head_status"
        tools:text="@string/dummy_text" />

    <Button
        android:id="@+id/btn_finished"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/finished"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_status" />

    <Button
        android:id="@+id/btn_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="?colorSecondary"
        android:text="@string/detection_error"
        app:layout_constraintStart_toStartOf="@+id/tv_status"
        app:layout_constraintTop_toTopOf="@+id/btn_finished" />

</androidx.constraintlayout.widget.ConstraintLayout>